--- a/proiect/assets/contact.html
+++ b/proiect/assets/contact.html
@@ -46,8 +46,8 @@
         <!-- Section A -->
         <section id="section-a" class="grid">
             <div class="content-wrap">
-                <h1>Formular contact</h1>
                 <form id="formjob" action="">
+                    <h1>Formular contact</h1>
                     <div>
                         <label for="nume">Nume</label>
                         <input type="text" name="Nume" id="nume">
@@ -72,17 +72,18 @@
                     </div>
                     <div>
                         <label for="job">Tip job dorit:</label>
-                        <input type="checkbox" name="full" id="full">Full-time 
+                        <input type="checkbox" name="full" id="full">Full-time
                         <input type="checkbox" name="part" id="part">Part-time <br>
                     </div>
                     <div>
-                        <label for="oras">Orasul dorit:</label>
+                        <label for="oras">Orasul:</label>
                         <select name="oras" id="oras">
                             <option value="0">Selecteaza...</option>
                             <option value="buzau">Buzau</option>
                             <option value="bucuresti">Bucuresti</option>
                             <option value="brasov">Brasov</option>
                         </select>
+                        <em>orasul unde doriti noul job</em>
                     </div>
                     <div>
                         <label for="mesaj">Mesaj:</label>
@@ -93,9 +94,10 @@
                             conditii</a>
                     </div>
                     <div>
-                    <input  class="bt" type="reset" value="Anuleaza">
-                    <input  class="bt" id="submit" type="submit" value="Trimite datele">
-                    </div>       
+                        <input class="bt" type="reset" value="Anuleaza">
+                        <input class="bt" id="submit" type="submit" value="Trimite datele">
+                    </div>
+                    <br><br>
                 </form>
             </div>
         </section>
